fixed gradient overlay gaps

--- a/src/styles/ProjectData.css
+++ b/src/styles/ProjectData.css
@@ -27,7 +27,7 @@
   .gradient-overlay::after {
     content: '';
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 0;
     right: 0;
     height: 2vh;
@@ -50,7 +50,7 @@
   .project-details-inner::after {
     content: '';
     position: absolute;
-    bottom: 0; /* Set bottom: 0 to keep it at the bottom of the container */
+    bottom: -1px; /* Set bottom: 0 to keep it at the bottom of the container */
     left: 0;
     right: 0;
     width: 100vw;
