--- a/src/styles/ProjectList.css
+++ b/src/styles/ProjectList.css
@@ -215,7 +215,9 @@
   .grid-inner::after {
     content: '';
     position: absolute;
-    top: 0;
+    margin-top:0;
+    padding-top:0;
+    top: -1px;
     left: 0;
     right: 0;
     width: 100vw; 
@@ -227,7 +229,7 @@
   .grid-container::after {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     right: 0;
     width:100vw;
